Updated all script installers to check for the mysql and possibly pgsql PHP modules, if needed.
Added a link on the Manage SSL Certificate page for downloading a domain's cert in PEM format.
Added a button on the Bandwidth Monitoring page for re-generating bandwidth stats from the original log files.
Added a script installer for SugarCRM 4.5.1b.
Added a Module Config option to control of sub-domains can be created. This is disabled by default unless the system already has some sub-domains, as they are confusing and rarely used.
All script installers now check that they can connect to the selected database bbefore proceeding with the install, just in case the login is invalid. This prevents odd errors later on.
Added Module Config options for external quota commands to use, instead of the standard Unix commands. This allows a different quota system (such as ZFS or on an NFS server) to be used instead.
When creating a virtual server inside a Solaris zone, existing virtual IPs in the zone can be selected for domains that need a private IP.
When editing server templates, fields that are not used because they are inheriting from the Default Settings are now greyed out.
Added a link for copying the default settings template, rather than creating an empty template which inherits from it.
The old one file per directory backup format is no longer available, unless already selected.
Optimized the collectinfo.pl program, which generates the right-side system information frame.
---- Changes since 3.39 ----
Updated the SugarCRM script installer to version 4.5.1c.
Password restrictions set in the Users and Groups module are now checked when creating or saving a domain.
Webmin libraries are not pre-loaded into memory for performance if the system has less than 256M RAM.
Updated the TWiki script install to redirect /twiki (or whatever path is selected) to /cgi-bin/twiki/view, which actually shows the Wiki.