@@ -109,7 +109,7 @@ vpopmail_auto=Path to autorespond program,3,Not installed
 line4.7=Spam filtering options,11
 spam_delivery=Default delivery for spam,10,-Deliver normally,/dev/null-Delete,$HOME/mail/spam-Spam mbox folder,$HOME/Maildir/.spam/-Spam Maildir folder,Other file or email address
 default_procmail=Allow mailbox users to configure procmail?,1,0-Yes,1-No
-clamscan_cmd=Full path to clamscan command,3,Not installed
+clamscan_cmd=Default ClamAV virus scanning command,10,-Not installed,clamscan-Standalone scanner (<tt>clamscan</tt>),clamdscan-Server scanner (<tt>clamdscan</tt>),Other program
 clam_delivery=Default delivery for viruses,10,/dev/null-Delete,$HOME/mail/virus-Virus mbox folder,$HOME/Maildir/.virus/-Virus Maildir folder,Other file or email address
 spam_white=Default spam whitelist option,1,1-Enabled,0-Disabled
 
