@@ -1,11 +1,8 @@
-<header>Default ClamAV virus scanning command</header>
+<header>Virus Scanning Program</header>
 
 The possible options for this field are :
 
 <dl>
-<dt><b>Not installed</b>
-<dd>Should be selected in ClamAV is not installed on your system.
-
 <dt><b>Standalone scanner (<tt>clamscan</tt>)</b>
 <dd>This is typically the default, and will tell Virtualmin to use the ClamAV scanning program that does all of the work by itself. This is certain to work, but can be slower than the next option.
 
@@ -14,7 +11,6 @@ The possible options for this field are :
 
 <dt><b>Other program</b>
 <dd>This option lets you tell Virtualmin to use some completely different program, such as your own wrapper script for ClamAV.
-
 </dl>
 
 <footer>
